fix: align lightbox media title - Align the title of the current media inside lightbox. - Change HTML order of contact form to improve accessibility. - Add a common radius variable.

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -9,7 +9,7 @@
     height: 70px;
     border: none;
     background-color: variables.$primary-color;
-    border-radius: 5px;
+    border-radius: variables.$common-radius;;
     cursor: pointer;
     &:hover {
         color: black;
@@ -27,7 +27,7 @@
 }
 
 .dropdown-expanded {
-    border-radius: 5px 5px 0 0;
+    border-radius: variables.$common-radius variables.$common-radius 0 0;
 }
 
 .close-button {
