--- a/src/scss/components/_media-gallery-cards.scss
+++ b/src/scss/components/_media-gallery-cards.scss
@@ -3,7 +3,7 @@
 .photographer-medias img, .photographer-medias video  {
     width: 350px;
     height: 300px;
-    border-radius: 5px;
+    border-radius: variables.$common-radius;
 }
 
 .photographer-medias video {
