--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -2,3 +2,7 @@
 
 $primary-color: #901C1C;
 $secondary-color: #D3573C;
+
+// Border radius
+
+$common-radius: 5px;
